--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '393926610253676');
+fbq('init', '9038305726187597');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=393926610253676&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=9038305726187597&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 </head>
@@ -163,11 +163,11 @@ src="https://www.facebook.com/tr?id=393926610253676&ev=PageView&noscript=1"
 
         <div class="first">
 
-            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhku2bxcZZkPC5ixDX5IV-e0vLRJUEv3zTa1OwV3Um_UjZbZhXCxG_X56kT99Nk6osMn1sIvHYFpNF13J5hvbBjj4oGCcr1IO521Y7mvHnYl8k_FMns9SFF_NHTBaUPUHWIED3QTtMlBvVZn_95iuaixEZslsLPIHQWGvSxLsTu4kqkzFjogG8sFXy3ydU"
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjcU0yitAQDZP8tjWziHsx30n4gmZtt9yQTjrUu8WukBNUGQnYxvNB_ynPBrMkmxN1-0ECEObiB6nwQfRW5SJ7soAiHfaBiNaT4Edtw7zMt_L-1w0Svp5Pdznx98j-xaSznsIZpsRh605Hzq1N8Ckkf1Cl9uXQJh4mFNaJDOwz8TFtVuBV1X9027wcrh213"
 
                 alt="logo">
 
-            <h1>Mehta is Back Official</h1>
+            <h1>TRADER SUNIL PATIL</h1>
 
             <p class="pp">💰 Maximize Your Trading Profits with India’s Youngest SEBI Registered Research Analyst 📈🎓
 
@@ -175,7 +175,7 @@ src="https://www.facebook.com/tr?id=393926610253676&ev=PageView&noscript=1"
 
 
 
-            <a href="https://t.me/+8EjgO07oKpZmY2E9" target="_blank">
+            <a href="https://t.me/+bqa_ji_dW985YWM1" target="_blank">
 
                 <button class="join_btn">
 
@@ -203,7 +203,7 @@ src="https://www.facebook.com/tr?id=393926610253676&ev=PageView&noscript=1"
 
                 Pure Value!</p>
 
-            <a href="https://t.me/+8EjgO07oKpZmY2E9" target="_blank">
+            <a href="https://t.me/+bqa_ji_dW985YWM1" target="_blank">
 
                 <button class="join_btn">
 
